eks/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.service: backend
  name: backend
spec:
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    io.service: backend
status:
  loadBalancer: {}
