eks/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.service: frontend
  name: frontend
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "alb"
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  selector:
    io.service: frontend
  type: LoadBalancer
status:
  loadBalancer: {}
